--- a/accessibility.html
+++ b/accessibility.html
@@ -37,7 +37,7 @@
             data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
             data-testid="AccessibilityLandingPage.HERO">
             <div class="accessibility__hero-container dir dir-ltr">
-              <div class="cla6gjt dir dir-ltr">
+              <div class="accessibility__hero-text dir dir-ltr">
                 <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
                   at Airbnb</h1>
                 <p class="sqwourp dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
@@ -411,7 +411,7 @@
               data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
               data-testid="AccessibilityLandingPage.HERO">
               <div class="accessibility__hero-container dir dir-ltr">
-                <div class="cla6gjt dir dir-ltr">
+                <div class="accessibility__hero-text dir dir-ltr">
                   <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
                     at Airbnb</h1>
                   <p class="sqwourp dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
