rename accessibility__hero & accessbility__feature

--- a/accessibility.html
+++ b/accessibility.html
@@ -21,7 +21,7 @@
           data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
           data-testid="AccessibilityLandingPage.NAV_BAR">
           <nav class="_1lovwbn">
-            <div class="accessibility__hero-container dir dir-ltr">
+            <div class="accessibility__container dir dir-ltr">
               <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                     aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                     style="height:1em;width:1em;display:block;fill:currentColor">
@@ -36,21 +36,21 @@
           <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
             data-testid="AccessibilityLandingPage.HERO">
-            <div class="accessibility__hero-container dir dir-ltr">
+            <div class="accessibility__container dir dir-ltr">
               <div class="accessibility__hero-text dir dir-ltr">
-                <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
+                <h1 id="FMP-target" class="accessibility__hero-title dir dir-ltr">Accessibility
                   at Airbnb</h1>
-                <p class="sqwourp dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
+                <p class="accessibility__hero-desc dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
               </div>
             </div>
           </div>
           <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.PRODUCT_FEATURES" data-component-position="2"
             data-testid="AccessibilityLandingPage.PRODUCT_FEATURES">
-            <div class="c1fovbcy dir dir-ltr">
-              <div class="s15ko7ml dir dir-ltr">
-                <div class="f1fh3g4w dir dir-ltr">
-                  <div class="accessibility__hero-container dir dir-ltr">
+            <div class="accessibility__feature-list dir dir-ltr">
+              <div class="accessibility__feature-item dir dir-ltr">
+                <div class="accessibility__feature-striped dir dir-ltr">
+                  <div class="accessibility__container dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr">Enhanced search filters</h2>
@@ -80,9 +80,9 @@
                   </div>
                 </div>
               </div>
-              <div class="s15ko7ml dir dir-ltr">
+              <div class="accessibility__feature-item dir dir-ltr">
                 <div class=" dir dir-ltr">
-                  <div class="accessibility__hero-container dir dir-ltr">
+                  <div class="accessibility__container dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr">Accessibility review</h2>
@@ -111,9 +111,9 @@
                   </div>
                 </div>
               </div>
-              <div class="s15ko7ml dir dir-ltr">
-                <div class="f1fh3g4w dir dir-ltr">
-                  <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__feature-item dir dir-ltr">
+                <div class="accessibility__feature-striped dir dir-ltr">
+                  <div class="accessibility__container dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr" aria-label="One-on-one messaging with Hosts">1:1 messaging with
@@ -149,7 +149,7 @@
             data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
             data-testid="AccessibilityLandingPage.PARTNERS">
             <div class="i1hddmai dir dir-ltr">
-              <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__container dir dir-ltr">
                 <picture>
                   <source media="(max-width: 320px)"
                     srcset="https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=320 1x, https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=720 2x, https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=960 3x">
@@ -167,7 +167,7 @@
               </div>
             </div>
             <div class="c15qy67f dir dir-ltr">
-              <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__container dir dir-ltr">
                 <h2 class="t1kuwyxz dir dir-ltr">How we’re making Airbnb more accessible</h2>
                 <div class="t7bz2j2 dir dir-ltr">
                   <div class="account-container__menu-container">
@@ -220,7 +220,7 @@
             data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
             data-testid="AccessibilityLandingPage.FAQ">
             <div class="s140jfqu dir dir-ltr">
-              <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__container dir dir-ltr">
                 <div class="c18gwk03 dir dir-ltr">
                   <div class="tqe8ewx dir dir-ltr">
                     <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
@@ -395,7 +395,7 @@
             data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
             data-testid="AccessibilityLandingPage.NAV_BAR">
             <nav class="_1lovwbn">
-              <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__container dir dir-ltr">
                 <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                       aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                       style="height:1em;width:1em;display:block;fill:currentColor">
@@ -410,24 +410,24 @@
             <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
               data-testid="AccessibilityLandingPage.HERO">
-              <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__container dir dir-ltr">
                 <div class="accessibility__hero-text dir dir-ltr">
-                  <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
+                  <h1 id="FMP-target" class="accessibility__hero-title dir dir-ltr">Accessibility
                     at Airbnb</h1>
-                  <p class="sqwourp dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
+                  <p class="accessibility__hero-desc dir dir-ltr">Here’s how we’re making it easier to travel with us.</p>
                 </div>
               </div>
             </div>
             <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.PRODUCT_FEATURES" data-component-position="2"
               data-testid="AccessibilityLandingPage.PRODUCT_FEATURES">
-              <div class="c1fovbcy dir dir-ltr">
-                <div class="s15ko7ml dir dir-ltr">
-                  <div class="f1fh3g4w dir dir-ltr">
-                    <div class="accessibility__hero-container dir dir-ltr">
+              <div class="accessibility__feature-list dir dir-ltr">
+                <div class="accessibility__feature-item dir dir-ltr">
+                  <div class="accessibility__feature-striped dir dir-ltr">
+                    <div class="accessibility__container dir dir-ltr">
                       <div class="account-container__menu-container">
-                        <div class="w1julkar dir dir-ltr">
-                          <div class="_1y4ibvpm">
+                        <div class="flex dir dir-ltr">
+                          <div class="accessibility__feature-col-1">
                             <div class="v1haw7b3 dir dir-ltr">
                               <div class="t16md56c dir dir-ltr">
                                 <h2 class="h1kxn3z3 dir dir-ltr">Enhanced search filters</h2>
@@ -437,7 +437,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_b7k3wng">
+                          <div class="accessibility__feature-col-2">
                             <div class="if11p26 dir dir-ltr">
                               <picture class="p1lyctf4 dir dir-ltr">
                                 <source media="(max-width: 400px)"
@@ -462,12 +462,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="s15ko7ml dir dir-ltr">
+                <div class="accessibility__feature-item dir dir-ltr">
                   <div class=" dir dir-ltr">
-                    <div class="accessibility__hero-container dir dir-ltr">
+                    <div class="accessibility__container dir dir-ltr">
                       <div class="account-container__menu-container">
-                        <div class="w1julkar w1roww1u dir dir-ltr">
-                          <div class="_1y4ibvpm">
+                        <div class="flex w1roww1u dir dir-ltr">
+                          <div class="accessibility__feature-col-1">
                             <div class="v1haw7b3 dir dir-ltr">
                               <div class="t16md56c dir dir-ltr">
                                 <h2 class="h1kxn3z3 dir dir-ltr">Accessibility
@@ -477,7 +477,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_b7k3wng">
+                          <div class="accessibility__feature-col-2">
                             <div class="if11p26 dir dir-ltr">
                               <picture class="p1lyctf4 dir dir-ltr">
                                 <source media="(max-width: 400px)"
@@ -502,12 +502,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="s15ko7ml dir dir-ltr">
-                  <div class="f1fh3g4w dir dir-ltr">
-                    <div class="accessibility__hero-container dir dir-ltr">
+                <div class="accessibility__feature-item dir dir-ltr">
+                  <div class="accessibility__feature-striped dir dir-ltr">
+                    <div class="accessibility__container dir dir-ltr">
                       <div class="account-container__menu-container">
-                        <div class="w1julkar dir dir-ltr">
-                          <div class="_1y4ibvpm">
+                        <div class="flex dir dir-ltr">
+                          <div class="accessibility__feature-col-1">
                             <div class="v1haw7b3 dir dir-ltr">
                               <div class="t16md56c dir dir-ltr">
                                 <h2 class="h1kxn3z3 dir dir-ltr" aria-label="One-on-one messaging with Hosts">1:1
@@ -518,7 +518,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_b7k3wng">
+                          <div class="accessibility__feature-col-2">
                             <div class="if11p26 dir dir-ltr">
                               <picture class="p1lyctf4 dir dir-ltr">
                                 <source media="(max-width: 400px)"
@@ -549,7 +549,7 @@
               data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
               data-testid="AccessibilityLandingPage.PARTNERS">
               <div class="i1hddmai dir dir-ltr">
-                <div class="accessibility__hero-container dir dir-ltr">
+                <div class="accessibility__container dir dir-ltr">
                   <picture>
                     <source media="(max-width: 320px)"
                       srcset="https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=320 1x, https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=720 2x, https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=960 3x">
@@ -567,7 +567,7 @@
                 </div>
               </div>
               <div class="c15qy67f dir dir-ltr">
-                <div class="accessibility__hero-container dir dir-ltr">
+                <div class="accessibility__container dir dir-ltr">
                   <h2 class="t1kuwyxz dir dir-ltr">How we’re making Airbnb
                     more accessible</h2>
                   <div class="t7bz2j2 dir dir-ltr">
@@ -628,7 +628,7 @@
               data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
               data-testid="AccessibilityLandingPage.FAQ">
               <div class="s140jfqu dir dir-ltr">
-                <div class="accessibility__hero-container dir dir-ltr">
+                <div class="accessibility__container dir dir-ltr">
                   <div class="c18gwk03 dir dir-ltr">
                     <div class="tqe8ewx dir dir-ltr">
                       <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
