--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6492,7 +6492,7 @@
                                   <div class="_1osion16">
                                    <div>
                                     <div class="_1lo32iz">
-                                     <div class="_t0tx82">
+                                     <div class="flex-grow-1">
                                       <div dir="ltr">
                                        <label for="Koan-map-poi-search-koan__input">
                                         <div class="_1kr87ol">
