--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8696,7 +8696,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                             <div data-plugin-in-point-id="BREADCRUMBS_DEFAULT"
                                               data-section-id="BREADCRUMBS_DEFAULT" style="padding-top: 32px;">
                                               <div class="flex-items-center">
-                                                <div class="_t0tx82">
+                                                <div class="flex-grow-1">
                                                   <ol class="lgx66tx dir dir-ltr">
                                                     <li class="inline-block dir dir-ltr"><a
                                                         href="https://www.airbnb.com/s/experiences/online?refinement_paths%5B%5D=%2Fexperiences&amp;tab_id=experience_tab"
