--- a/wishlist-loader.html
+++ b/wishlist-loader.html
@@ -253,7 +253,7 @@
                               <div class="_twmmpk">
                                 <span aria-busy="true" style="display: block; height: 19px; width: 35%; background-color: white; border-radius: 4px;">
                                   <span
-                                   class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                   class="animation__fill-mode-forwards atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
                                    style="height: 100%; width: 100%; border-radius: 4px;"
                                   >
                                   </span>
@@ -295,14 +295,14 @@
                                   <div style="width: 100%;">
                                     <span aria-busy="true" style="display: block; height: 19px; width: 35%; background-color: white; border-radius: 4px;">
                                       <span
-                                       class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                       class="animation__fill-mode-forwards atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
                                        style="height: 100%; width: 100%; border-radius: 4px;"
                                       >
                                       </span>
                                     </span>
                                     <span aria-busy="true" style="display: block; height: 14px; width: 55%; background-color: white; border-radius: 4px; margin-top: 15px;">
                                       <span
-                                       class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                       class="animation__fill-mode-forwards atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
                                        style="height: 100%; width: 100%; border-radius: 4px;"
                                       >
                                       </span>
@@ -332,7 +332,7 @@
                                     <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
                                       <span data-testid="dot-loader" class="_l7ztla" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
                                     </span>
-                                  <span class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr" style="height: 100%; width: 100%;"></span>
+                                  <span class="animation__fill-mode-forwards atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block atm_mk_h2mmj6 atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                   </span>
                                 </div>
                               </div>
