refactor animation__ -> animation-

--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -1380,7 +1380,7 @@
                                                             width: 100%;
                                                           "
                                                           ><span
-                                                            class="animation__fill-mode-forwards animation__iteration-count-infinite animation__direction-alternate animation__duration-1s atm_1c_lvmtox animation__timing-function-ease-in-out animation__bg-color-current block relative animation__all-none animation__opacity dir dir-ltr"
+                                                            class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative animation-all-none animation-opacity dir dir-ltr"
                                                             style="
                                                               height: 100%;
                                                               width: 100%;
