--- a/lps-resources/merchandising.html
+++ b/lps-resources/merchandising.html
@@ -6602,7 +6602,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -7110,7 +7110,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -7476,7 +7476,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -9047,7 +9047,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -9738,7 +9738,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -10175,7 +10175,7 @@
                                         class="_11ry7lz"
                                       >
                                         <div
-                                          class="animation__name-keyframe"
+                                          class="animation-name-keyframe"
                                           data-testid="explore-section-dismiss-animation-wrapper"
                                         >
                                           <div
@@ -16936,7 +16936,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
@@ -17662,7 +17662,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
@@ -18112,7 +18112,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
@@ -22593,7 +22593,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
@@ -23487,7 +23487,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
@@ -24097,7 +24097,7 @@
                                   class="_11ry7lz"
                                 >
                                   <div
-                                    class="animation__name-keyframe"
+                                    class="animation-name-keyframe"
                                     data-testid="explore-section-dismiss-animation-wrapper"
                                   >
                                     <div class="flex-before-after dir dir-ltr" style="">
