--- a/messages-loader.html
+++ b/messages-loader.html
@@ -1349,7 +1349,7 @@
                                       <div class="_195z4tb">
                                         <div class="_12k4345" aria-label="Related actions for this conversation"
                                           data-testid="inbox-chips-carousel">
-                                          <div><a href="/rooms/35353333" class="_1duvvy3s"><img class="_ay4wjb"
+                                          <div><a href="/rooms/35353333" class="_1duvvy3s"><img class="absolute"
                                                 src="https://a0.muscache.com/pictures/a4216c91-170c-4a5b-bacc-b22450d1d005.jpg"
                                                 width="16" height="16" alt="" aria-hidden="true"><span
                                                 class="_iwbptf">Listing</span></a></div>
