--- a/media-assets.html
+++ b/media-assets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/media.css" />
 
     <title>
       Introducing the Airbnb 2021 Winter Release: 50+ upgrades and innovations
