--- a/accessibility.html
+++ b/accessibility.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/global.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
+  <link rel="stylesheet" href="assets/css/bugs.css" />
   <title>Find places on Airbnb with accessibility features | Airbnb</title>
 </head>
 
@@ -387,16 +388,16 @@
       </div>
     </div>
   </div>
-  <div data-application="true" class="hidden block-md">
+  <div data-application="true" class="hidden block-md body-scroll">
     <div data-application="true">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e ">
-          <div class="initial dir dir-ltr" data-tracking-events="impression"
+          <div class="dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
-            data-testid="AccessibilityLandingPage.NAV_BAR">
-            <nav class="_1lovwbn">
+            data-testid="AccessibilityLandingPage.NAV_BAR" style="width: 100%;height: 72px;">
+            <nav class="_1lovwbn collapsable-navbar" style="width: 100%;height: 72px;">
               <div class="accessibility__container dir dir-ltr">
-                <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
+                <div class="_3zbxjh" style="padding-right: var(--cy-o-aco);padding-left: var(--cy-o-aco);"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                       aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                       style="height:1em;width:1em;display:block;fill:currentColor">
                       <path
@@ -1130,5 +1131,5 @@
     </div>
   </div>
 </body>
-
+<script src="assets/js/pages/accessibility.js"></script>
 </html>
