--- a/messages.html
+++ b/messages.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="assets/css/pages.css" />
   <link rel="stylesheet" href="assets/css/global.css" />
+  <link rel="stylesheet" href="assets/css/bugs.css" />
   <title>Messages • Airbnb</title>
 </head>
 
