--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6474,8 +6474,8 @@
                               >
                                 <img src="../assets/images/map-wishlist.png" alt="" class='w-full' style='height: 100%; object-fit: cover;'>
                                 <div class="cezhrh0 dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 120px; top: 0px; right: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
-                                  <div class="c15e4bhw ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
-                                   <button id="pin-location" aria-label="Add a place to the map" type="button" class="cj0q2ib sne7mb7 rp6dtyx c1y4i074 dir dir-ltr">
+                                  <div class="wishlist__map-controls ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
+                                   <button id="pin-location" aria-label="Add a place to the map" type="button" class="btn-map-ctrl btn-map-ctrl-size btn-map-ctrl-base c1y4i074 dir dir-ltr">
                                     <svg viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                                      <path
                                       d="m16.679 24.988c0.2505-0.2504 0.5642-0.4263 0.9023-0.5319 4.8782-1.5232 8.4188-6.0764 8.4188-11.456 0-6.6274-5.3726-12-12-12-6.6274 0-12 5.3726-12 12 0 5.5372 3.7504 10.198 8.8495 11.582 0.369 0.1001 0.7125 0.2831 0.9828 0.5534l1.6426 1.6427c0.3905 0.3905 1.0237 0.3905 1.4142 0l1.7898-1.7899z"
@@ -6539,15 +6539,15 @@
                                   </div>
                                 </div>
                                 <div class="dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 24px; top: 0px; right: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
-                                  <div class="c15e4bhw dir dir-ltr" style="width: 40px; flex-direction: column;">
-                                   <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx t92tojf c1y4i074 dir dir-ltr">
+                                  <div class="wishlist__map-controls dir dir-ltr" style="width: 40px; flex-direction: column;">
+                                   <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="btn-map-ctrl btn-map-ctrl-size btn-map-ctrl-base btn-map-ctrl-in c1y4i074 dir dir-ltr">
                                     <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false">
                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M7 1a1 1 0 0 1 2 0v14a1 1 0 1 1-2 0V1z"></path>
                                      <path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path>
                                     </svg>
                                    </button>
                                    <div class="c1fisx1o dir dir-ltr"></div>
-                                   <button aria-label="Zoom out" data-testid="map/ZoomOutButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx b1d5ierg c1y4i074 dir dir-ltr">
+                                   <button aria-label="Zoom out" data-testid="map/ZoomOutButton" type="button" class="btn-map-ctrl btn-map-ctrl-size btn-map-ctrl-base btn-map-ctrl-out c1y4i074 dir dir-ltr">
                                     <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path></svg>
                                    </button>
                                   </div>
