fix social-impact-host mobile responsiveness

--- a/social-impact-host.html
+++ b/social-impact-host.html
@@ -466,7 +466,7 @@
                               >
                                 <div data-showat="mediumAndAbove">
                                   <div class="_w4nhf3">
-                                    <div class="_1pk994">
+                                    <div class="_1pk994 flex-column">
                                       <div class="_1xtc178">
                                         <a
                                           rel="noopener noreferrer"
@@ -841,7 +841,7 @@ Rome, Italy"
                               >
                                 <div data-showat="mediumAndAbove">
                                   <div class="_w4nhf3">
-                                    <div class="_1pk994">
+                                    <div class="_1pk994 flex-column">
                                       <div class="_1xtc178">
                                         <a
                                           rel="noopener noreferrer"
