fx bugs no.2 cards 2 columns

--- a/article.html
+++ b/article.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/bugs.css" />
     <title>Home - Resource Center - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -167,7 +168,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_ni9axhe hidden-xl">
+                    <div class="hidden-xl" style="height: 64px;padding-top: 15px;">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -203,7 +204,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_ni9axhe hidden block-xl">
+                    <div class="hidden block-xl">
                       <div class="_cfvh61">
                         <div data-showat="largeAndAbove">
                           <div class="_cjo0m2 items-center">
