--- a/media-category.html
+++ b/media-category.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
     <link rel="stylesheet" href="assets/css/media.css" />
+    <link rel="stylesheet" href="assets/css/bugs.css" />
 
     <title>
       Introducing the Airbnb 2021 Winter Release: 50+ upgrades and innovations
@@ -36,6 +37,7 @@
             <button
               class="press-release__site press-release__toggle"
               data-toggle="offcanvasRight"
+              id="media-menu-btn"
             >
               <span class="sr-only">Toggle navigation</span>
               <span></span>
@@ -913,10 +915,10 @@
       <nav
         class="offcanvas-panel offcanvas-panel-right"
         role="navigation"
-        style="display: none"
+        style="display: block"
       >
         <div class="menu-offcanvas menu-offcanvas-primary">
-          <button class="mobileMenu__close js-mobile-menu-close">
+          <button class="mobileMenu__close js-mobile-menu-close" id="media-menu-close-btn">
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
@@ -1197,4 +1199,5 @@
       </nav>
     </div>
   </body>
+  <script src="assets/js/pages/media.js" defer></script>
 </html>
