fx bugs no.5 & no. 7 part A

--- a/topic.html
+++ b/topic.html
@@ -998,7 +998,7 @@
                                                     <div class=" dir dir-ltr"
                                                         id="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label"><span
                                                             class="a8jt5op dir dir-ltr">Content type filters</span></div><button
-                                                        class="_np90lm" aria-expanded="false" type="button">Content type<span
+                                                        class="_np90lm" aria-expanded="false" type="button" id="content-type-btn">Content type<span
                                                             aria-hidden="true" class="_1vwho579">Content type</span></button>
                                                 </div>
                                             </div>
@@ -2350,7 +2350,7 @@
       </div>
     </div>
 
-    <div dir="ltr">
+    <div dir="ltr" id="content-type-modal" class="hidden">
       <div class="_ybk1kl0"></div>
         <section>
           <div class="_g2ext" data-testid="modal-container">
