fx bugs no. 7 part D

--- a/topic.html
+++ b/topic.html
@@ -167,7 +167,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_ni9axhe hidden-xl">
+                    <div class="hidden-xl" style="height: 64px;padding-top: 15px;">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -203,7 +203,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_ni9axhe hidden block-xl">
+                    <div class="hidden block-xl">
                       <div class="_cfvh61">
                         <div data-showat="largeAndAbove">
                           <div class="_cjo0m2 items-center">
