fix font weight in header in media pages

--- a/media-contact.html
+++ b/media-contact.html
@@ -69,9 +69,9 @@
               </li>
               <li
                 id="menu-item-17"
-                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"
+                class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-15 current_page_item menu-item-17"
               >
-                <a href="https://news.airbnb.com/contact/">Contact</a>
+                <a href="https://news.airbnb.com/contact/" aria-current="page">Contact</a>
               </li>
             </ul>
             <div class="languagePicker languagePicker--default has-submenu">
@@ -331,7 +331,7 @@
                 class="header__searchButton js-header__searchButton"
                 aria-label="Search"
               >
-                <span class="header__searchButtonLabel font-w-bold">Search</span>
+                <span class="header__searchButtonLabel">Search</span>
               </button>
               <button
                 type="button"
