fix spacing and heading in media pages

--- a/media-assets-search.html
+++ b/media-assets-search.html
@@ -330,7 +330,7 @@
                 class="header__searchButton js-header__searchButton"
                 aria-label="Search"
               >
-                <span class="header__searchButtonLabel font-w-bold">Search</span>
+                <span class="header__searchButtonLabel">Search</span>
               </button>
               <button
                 type="button"
