--- a/topic.html
+++ b/topic.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/bugs.css" />
+
     <title>Home - Resource Center - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -964,7 +966,7 @@
                                             <div style="color:#222222">
                                                 <div style="margin-bottom:16px">
                                                     <div class="_rhltx6">
-                                                        <section>
+                                                        <section class="_1xi2lcs">
                                                             <h1 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">Attracting
                                                                 bookings</h1>
                                                         </section>
