--- a/messages-loader.html
+++ b/messages-loader.html
@@ -1950,8 +1950,8 @@
     </div>
   </div>
 
-  <script src="../assets/js/pages/message.js" defer></script>
-  <script src="../assets/js/components.js"></script>
+  <script src="assets/js/pages/message.js" defer></script>
+  <script src="assets/js/components.js"></script>
 </body>
 
 </html>
