fx bugs no. 17 loader

--- a/help-loader.html
+++ b/help-loader.html
@@ -1152,6 +1152,6 @@
   </div>
 </div>
 
-    <script src="../assets/js/components.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
   </body>
 </html>
